--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.teste_br_mall"
+        applicationId "com.teste_kotlin"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
